Minor fixes
Made the leaderboard title larger, and fixed overlapping profile pictures.

--- a/src/components/LeaderBoard/TeamLeaderboardChart.scss
+++ b/src/components/LeaderBoard/TeamLeaderboardChart.scss
@@ -29,4 +29,7 @@
 .title {
   text-align: center;
   margin-bottom: 10px;
+  ion-card-title {
+    font-size: 40px;
+  }
 }
